Added support for specifying URLStreamHandler's to be able to provide alternate URLConnection implementations.